// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField > Snapshots > should applies disabled classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--disabled_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      disabled=""
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should applies fullWidth classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should apply 'critical' skin classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--critical_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should apply 'ghost' appearance classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--ghost_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should apply 'lg' size classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--lg_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should apply 'md' size classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should apply 'neutral' skin classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should apply 'outline' appearance classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should apply 'sm' size classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--sm_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should apply 'soft' appearance classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--soft_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should apply 'success' skin classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--success_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should apply 'xl' size classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--xl_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should render additional classes 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--neutral_810873 other-class"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should render left slot content 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <span
      class="_text-field__left_810873"
    >
      Left slot
    </span>
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField > Snapshots > should render right slot content 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
    <span
      class="_text-field__right_810873"
    >
      Right slot
    </span>
  </div>
</div>
`;

exports[`TextField > Snapshots > should renders default component 1`] = `
<div>
  <div
    class="_text-field_810873 _text-field--full-width_810873 _text-field--md_810873 _text-field--outline_810873 _text-field--neutral_810873"
  >
    <input
      class="_text-field__input_810873"
      value="Input"
    />
  </div>
</div>
`;
